Hopefully finally fixed problems with the homepage on mobile devices 2.

--- a/static/css/post.css
+++ b/static/css/post.css
@@ -26,7 +26,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 body {
- font-family: "system";
+ font-family: "system",Arial, Helvetica, sans-serif;
  padding-top: 0px;
  margin-top: 0px;
  padding-bottom: 100px;
