--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,7 +24,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 body {
-    font-family: "system", "Roboto";
+    font-family: "system", Arial, Helvetica, sans-serif;
     transition: 0.2s;
     padding-bottom: 100px;
 }
